force-app/main/default/objects/Vessel_Event__c/Vessel_Event__c.object-meta.xml
<CustomObject>
    <label>Vessel Event</label>
    <nameField>
        <displayFormat>VE-{0000}</displayFormat>
        <label>Vessel Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vessel Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>