force-app/main/default/objects/Vessel_Event__c/fields/Actual_Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Departure_Date_Time__c</fullName>
    <label>Actual Departure Date Time</label>
    <type>DateTime</type>
</CustomField>