force-app/main/default/objects/Vessel_Event__c/fields/Current_Port__c.field-meta.xml
<CustomField>
    <fullName>Current_Port__c</fullName>
    <label>Current Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>