force-app/main/default/objects/Vessel_Event__c/fields/Estimated_Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Departure_Date_Time__c</fullName>
    <label>Estimated Departure Date Time</label>
    <type>DateTime</type>
</CustomField>