force-app/main/default/objects/Vessel_Event__c/fields/Next_Port__c.field-meta.xml
<CustomField>
    <fullName>Next_Port__c</fullName>
    <label>Next Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>