force-app/main/default/objects/Vessel_Event__c/fields/Voyage_Number__c.field-meta.xml
<CustomField>
    <fullName>Voyage_Number__c</fullName>
    <label>Voyage Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>